<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="binding"
            type="com.example.techshellindiaproject.MainActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darback"
        android:padding="28dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/showtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_to_our_job_portal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/loginBtn"
            android:fontFamily="sans-serif-black"
            android:text="@string/already_have_an_account" />
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/darkgreen"
            android:text="@string/login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/loginBtn"
            android:id="@+id/regtrLayout1"
            android:fontFamily="sans-serif-black"
            android:text="@string/don_t_have_an_account" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/darkopink"
            android:layout_centerHorizontal="true"
     android:layout_below="@+id/regtrLayout1"
            android:id="@+id/registerBtn"/>

    </RelativeLayout>
</layout>